--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 
-<title>Try</title>
+<title>NevBank</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="icon" href="NevBank.png" />
 
 <body class="bg-light">
   <div id="root"></div>
