--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
   integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
   crossorigin="anonymous"
 />
+<meta charset="UTF-8" />
+<meta name="description" content="Security and Transparency website" />
+<meta name="keywords" content="HTML, CSS, JavaScript, React" />
+<meta name="author" content="Michael Oladipupo, Nancy Amandi, Ayoseun Solomon" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="NevBank.png" />
 
 <body class="">
