to link the register page to the api

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="HTML, CSS, JavaScript, React" />
 <meta name="author" content="Michael Oladipupo, Nancy Amandi, Ayoseun Solomon" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="NevBank.png" />
+<link rel="icon" href="sopaEreto.png" />
 
 <body class="">
   <div id="root"></div>
