started the landing page

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 <meta name="author" content="Michael Oladipupo, Nancy Amandi, Ayoseun Solomon" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="sopaEreto.png" />
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
 <body class="">
   <div id="root"></div>
